updated html coding

--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
               <div class="col col12 menuContainer">
                 <h3>Everyday Dining</h3>
                 <div id="aLaCarteMenu"class="col col4">
-                  <img src="#" alt="">
+                  <img src="img/menuimg_1.png">
                   <h3>Daily A La Carte Menu</h3>
                   <p>Available weekdays from 12 till 3pm and 6pm till late</p>
 
@@ -48,7 +48,7 @@
                 </div>
 
               <div id="buffetMenu"class="col col4">
-                <img src="#" alt="">
+                <img src="img/menuimg_1.png">
                 <h3>Buffet Menu</h3>
                 <p>Our delicious $59 buffet menu.<br>
                    Available for groups of 30 people or more.</p>
@@ -61,7 +61,7 @@
                  </div>
 
           <div id="brunchMenu"class="col col4">
-            <img src="#" alt="">
+            <img src="img/menuimg_1.png">
             <h3>Brunch Menu</h3>
             <p>Our delicious brunch menu is served on Saturday and Sunday,<br>
             from 11am till 3pm.</p>
@@ -80,7 +80,7 @@
         <div class="col col12 menuContainer">
           <h3>Bar</h3>
           <div id="nonalc_menu"class="col col4">
-            <img src="#" alt="">
+            <img src="img/menuimg_3.png">
             <h3>Non-Alcoholic Drink List</h3>
             <p>Something for everyone to enjoy.</p>
 
@@ -92,7 +92,7 @@
           </div>
 
           <div id="alc_menu" class="col col4">
-            <img src="#" alt="">
+            <img src="img/menuimg_3.png">
             <h3>Alcholic Drink List</h3>
             <p>Enjoy our full range of Beer, Wine, Spirits and more!</p>
 
@@ -104,7 +104,7 @@
         </div>
 
           <div id="sharingBoard"class="col col4">
-            <img src="#" alt="">
+            <img src="img/menuimg_3.png">
             <h3>Canap&#233;s/Sharing Boards</h3>
             <p>Our fantastic selection of canap&#233;s & boards.<br>
             Hot or cold, sweet or savoury, perfect for any occasion</p>
@@ -123,7 +123,7 @@
     <div class="col col12 menuContainer">
       <h3>Function and Event</h3>
       <div id="degust_menu"class="col col4">
-        <img src="#" alt="">
+        <img src="img/menuimg_2.png">
         <h3>Degustation Menu</h3>
         <p>Available with or without wine match, for 2-40 people.<br>
         Minimum of 48hrs notice required</p>
@@ -136,7 +136,7 @@
   </div>
 
       <div id="3setmenu"class="col col4">
-        <img src="#" alt="">
+        <img src="img/menuimg_2.png">
         <h3>3 Course Set Menu</h3>
         <p>Available for groups from 12-200 people.<br>
         Set Menu at $75.</p>
@@ -149,7 +149,7 @@
       </div>
 
       <div id="substanCanapes"class="col col4">
-        <img src="#" alt="">
+        <img src="img/menuimg_2.png">
         <h3>Substantial Canap&#233;s</h3>
         <p>Mini portions for functions of 20&#43; people.</p>
 
